--- a/app/client/main.html
+++ b/app/client/main.html
@@ -2,6 +2,35 @@
     <title>Page Title</title>
 </head>
 <body>
-    <h1>wagwan ninja!</h1>
-
+    <h1>Waaaaagwan Rasta!</h1>
+    {{>app}}
 </body>
+
+<template name='app'>
+    <div class="row">
+        <div class="medium-6 medium-centered large-4 large-centered columns">
+
+            <form>
+                <div class="row column log-in-form">
+                    <h4 class="text-center">lol this is a blog trial</h4>
+
+                    <label>Input Title
+                        <input type="text" placeholder="Title of the blog">
+                    </label>
+                    <p>
+
+                    </p>
+                    <label>
+                        Body
+                        <textarea placeholder="None"></textarea>
+                    </label>
+                    <p></p>
+
+                    <button type="submit" class="button expanded">Submit post</button>
+
+                </div>
+            </form>
+
+        </div>
+    </div>
+</template>
