main.js first commit

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -15,14 +15,14 @@
                     <h4 class="text-center">lol this is a blog trial</h4>
 
                     <label>Input Title
-                        <input type="text" placeholder="Title of the blog">
+                        <input id="blogTitle" type="text" placeholder="Title of the blog">
                     </label>
                     <p>
 
                     </p>
                     <label>
                         Body
-                        <textarea placeholder="None"></textarea>
+                        <textarea id="textArea" placeholder="None"></textarea>
                     </label>
                     <p></p>
 
