--- a/app/client/main.html
+++ b/app/client/main.html
@@ -6,11 +6,11 @@
     {{>app}}
 </body>
 
-<template name='app'>
+<template name="app">
     <div class="row">
         <div class="medium-6 medium-centered large-4 large-centered columns">
 
-            <form>
+            <form id="appForm">
                 <div class="row column log-in-form">
                     <h4 class="text-center">lol this is a blog trial</h4>
 
